--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@remotion/cli": "4.0.422",
     "@remotion/rive": "^4.0.422",
+    "gsap": "^3.14.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "remotion": "4.0.422"
