--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "remotion": "4.0.267"
   },
   "devDependencies": {
+    "@remotion/cli": "^4.0.267",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "typescript": "5.6.3",
-    "tailwindcss": "3.4.14"
+    "tailwindcss": "3.4.14",
+    "typescript": "5.6.3"
   }
 }
