--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "professor-pint",
-  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "remotion studio",
-    "build": "remotion render src/index.ts HistoryOfMoneyFull out/video.mp4",
-    "test": "echo \"No tests configured\""
+    "build": "remotion render src/index.ts HistoryOfMoneyFull out/video.mp4"
   },
   "dependencies": {
     "react": "18.3.1",
@@ -13,10 +11,8 @@
     "remotion": "4.0.267"
   },
   "devDependencies": {
-    "@remotion/cli": "^4.0.267",
+    "typescript": "5.6.3",
     "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "tailwindcss": "3.4.14",
-    "typescript": "5.6.3"
+    "@types/react-dom": "18.3.1"
   }
 }
